--- a/demo/src/main/res/values/strings.xml
+++ b/demo/src/main/res/values/strings.xml
@@ -19,5 +19,6 @@
 <resources>
 
     <string name="app_name">ProgressLayouts</string>
+    <string name="message_loading">Please wait</string>
 
 </resources>
